--- a/qummi/index.html
+++ b/qummi/index.html
@@ -2,72 +2,20 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Menú del Juego</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(to bottom right, #1e1e2f, #3a3a5a);
-      color: white;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-    }
-
-    .menu {
-      text-align: center;
-      background-color: rgba(0, 0, 0, 0.6);
-      padding: 40px;
-      border-radius: 20px;
-      box-shadow: 0 0 20px rgba(255, 255, 255, 0.2);
-    }
-
-    .menu h1 {
-      font-size: 3em;
-      margin-bottom: 30px;
-    }
-
-    .menu button {
-      display: block;
-      margin: 15px auto;
-      padding: 15px 30px;
-      font-size: 1.2em;
-      color: white;
-      background-color: #5c5cff;
-      border: none;
-      border-radius: 10px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-
-    .menu button:hover {
-      background-color: #7878ff;
-      transform: scale(1.05);
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Menú Principal</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <div class="menu">
-    <h1>Mi Juego</h1>
-    <button onclick="jugar()">Jugar</button>
-    <button onclick="opciones()">Opciones</button>
-    <button onclick="salir()">Salir</button>
+  <div class="fondo"></div>
+
+  <div class="menu-container">
+    <h1>Mi Juego Épico</h1>
+    <button class="boton" onclick="jugar()">Jugar</button>
+    <button class="boton" onclick="opciones()">Opciones</button>
+    <button class="boton" onclick="salir()">Salir</button>
   </div>
 
-  <script>
-    function jugar() {
-      alert("Iniciando juego...");
-      // Aquí iría la lógica para iniciar el juego
-    }
-
-    function opciones() {
-      alert("Opciones aún no disponibles.");
-    }
-
-    function salir() {
-      alert("Gracias por jugar.");
-    }
-  </script>
+  <script src="script.js"></script>
 </body>
 </html>
